apps/mongo-express/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app.kubernetes.io/name: mongo-express
    app.kubernetes.io/instance: mongo-express
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: mongo-express
      app.kubernetes.io/instance: mongo-express
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongo-express
        app.kubernetes.io/instance: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express:1.0.2-20-alpine3.19
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
