apps/mongo-express/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  labels:
    app.kubernetes.io/name: mongo-express
    app.kubernetes.io/instance: mongo-express
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: mongo-express
    app.kubernetes.io/instance: mongo-express
