apps/mongo-express/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mongo-express
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Mongo Express"
    gethomepage.dev/group: "Databases"
    gethomepage.dev/icon: "mongodb"
    gethomepage.dev/description: "MongoDB Web UI"
    gethomepage.dev/href: "https://mongo-express.cyphers.app"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`mongo-express.cyphers.app`)
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik-auth
          namespace: authentik
      services:
        - name: mongo-express
          namespace: mongo-express
          port: 8081
  tls:
    secretName: production-cyphers-app-tls
